#
#                       Written by JoungKyun.Kim
#            Copyright (c) 2011 JoungKyun.Kim <http://oops.org>
#
# -----------------------------------------------------------------------------
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
#     * Redistributions of source code must retain the above copyright notice,
#       this list of conditions and the following disclaimer.
#
#     * Redistributions in binary form must reproduce the above copyright
#       notice, this list of conditions and the following disclaimer in the
#       documentation and/or other materials provided with the distribution.
#
#     * Neither the name of JoungKyun.Kim nor the url of oops.org
#       nor the names of their contributors may be used to endorse or
#       promote products derived from this software without specific prior
#       written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
# POSSIBILITY OF SUCH DAMAGE.
# -----------------------------------------------------------------------------
# This file is part of olibc.
#

# $Id: Makefile.am,v 1.1 2011-04-09 15:54:21 oops Exp $

if ! COMPAT
EXTRA_DIST = ko/addslashes.3 ko/argv_make.3 ko/bin2dec.3 ko/bin2hex.3 \
			 ko/bin2long.3 ko/char2int.3 ko/charset_conv.3 \
			 ko/convert_punycode.3 ko/dec2bin.3 ko/file_exists.3 \
			 ko/file_status.3 ko/get_whitespace.3 ko/hex2bin.3 \
			 ko/human_size.3 ko/is_ksc5601.3 ko/is_strint.3 ko/is_utf8.3 \
			 ko/join.3 ko/long2bin.3 ko/microtime.3 ko/numberFormat.3 \
			 ko/o_getopt.3 ko/ofree_array.3 ko/preg_fgrep.3 ko/preg_grep.3 \
			 ko/preg_match.3 ko/preg_match_r.3 ko/preg_quote.3 \
			 ko/preg_replace.3 ko/preg_replace_arr.3 ko/readfile.3 \
			 ko/realpath_r.3 ko/setansi.3 ko/split.3 ko/str2double.3 \
			 ko/str2long.3 ko/strtolower.3 ko/strtoupper.3 ko/trim.3 \
			 ko/trim_r.3 ko/writefile.3

dist_man_MANS = addslashes.3 argv_make.3 bin2dec.3 bin2hex.3 bin2long.3 \
				char2int.3 charset_conv.3 convert_punycode.3 dec2bin.3 \
				file_exists.3 file_status.3 get_whitespace.3 hex2bin.3 \
				human_size.3 is_ksc5601.3 is_strint.3 is_utf8.3 join.3 \
				long2bin.3 microtime.3 numberFormat.3 o_getopt.3 \
				ofree_array.3 preg_fgrep.3 preg_grep.3 preg_match.3 \
				preg_match_r.3 preg_quote.3 preg_replace.3 preg_replace_arr.3 \
				readfile.3 realpath_r.3 setansi.3 split.3 str2double.3 \
				str2long.3 strtolower.3 strtoupper.3 trim.3 trim_r.3 \
				writefile.3

ko_man3dir = $(mandir)/ko/man3
ko_man3_DATA = ko/addslashes.3 ko/argv_make.3 ko/bin2dec.3 ko/bin2hex.3 \
			 ko/bin2long.3 ko/char2int.3 ko/charset_conv.3 \
			 ko/convert_punycode.3 ko/dec2bin.3 ko/file_exists.3 \
			 ko/file_status.3 ko/get_whitespace.3 ko/hex2bin.3 \
			 ko/human_size.3 ko/is_ksc5601.3 ko/is_strint.3 ko/is_utf8.3 \
			 ko/join.3 ko/long2bin.3 ko/microtime.3 ko/numberFormat.3 \
			 ko/o_getopt.3 ko/ofree_array.3 ko/preg_fgrep.3 ko/preg_grep.3 \
			 ko/preg_match.3 ko/preg_match_r.3 ko/preg_quote.3 \
			 ko/preg_replace.3 ko/preg_replace_arr.3 ko/readfile.3 \
			 ko/realpath_r.3 ko/setansi.3 ko/split.3 ko/str2double.3 \
			 ko/str2long.3 ko/strtolower.3 ko/strtoupper.3 ko/trim.3 \
			 ko/trim_r.3 ko/writefile.3

endif
